Cahges main equation of absil: removes where U contracts with eta

--- a/doc/specific_preambl.tex
+++ b/doc/specific_preambl.tex
@@ -42,4 +42,5 @@
 \newcommand*{\grass}[2]{\ensuremath{\text{Gr}(#1,#2)}}
 \newcommand*{\stiefel}[2]{\ensuremath{\text{ST}(#1,#2)}}
 \newcommand*{\extAlg}{\ensuremath{\bigwedge \orbSp}}
-\newcommand*{\extProd}{\ensuremath{\bigwedge^n \orbSp}}
+\newcommand*{\extProd}{\ensuremath{\bigwedge\nolimits^n \orbSp}}
+\newcommand*{\extProdTwo}{\ensuremath{\bigwedge\nolimits^2 \orbSp}}
