--- a/doc/specific_preambl.tex
+++ b/doc/specific_preambl.tex
@@ -37,8 +37,8 @@
 \newcommand{\sumBBp}{\ensuremath{
     \sum_{\mathclap{\substack{\irpBB > \irpB\\\irpB \ne \irp,\irpP\\\irpBB \ne \irp,\irpP}}}}}
 
-\newcommand*{\HilbSp}{\ensuremath{\mathscr{H}}}
-\newcommand*{\orbSp}{\ensuremath{\mathcal{W}}}
+%\newcommand*{\HilbSp}{\ensuremath{\mathscr{H}}}
+%\newcommand*{\orbSp}{\ensuremath{\mathcal{W}}}
 \newcommand*{\grass}[2]{\ensuremath{\text{Gr}(#1,#2)}}
 \newcommand*{\stiefel}[2]{\ensuremath{\text{ST}(#1,#2)}}
 \newcommand*{\extAlg}{\ensuremath{\bigwedge \orbSp}}
